# MimosaEngine

./: .gitignore  CMakeLists.txt  LICENSE  MimosaEngine.sln  MimosaEngine.vcxproj  MimosaEngine.vcxproj.filters  OpenGL Template.sln  OpenGL Template.vcxproj  OpenGL Template.vcxproj.filters  README.md  build.bat  build.sh  create_embedded_file.py  doxyfile  log.txt
assets/: example.frag  example.vert  examplePostProcessingShader.frag  examplePostProcessingShader.vert  flatShader.frag  flatShader.vert  passthrough.frag  passthrough.vert
assets/engine/: flatShader.frag  passthrough.frag
docs/source/: conf.py  index.rst
src/core/: accurate_timer.cpp  accurate_timer.h  globals.h  input_handler.cpp  input_handler.h  log.cpp  log.h  main.cpp  material_manager.cpp  resource_manager.cpp  resource_manager.h
src/debug/: obj_writer.h
src/debug/detail/: obj_writer.cpp
src/embedded_files/: gen_embedded_files.py
src/embedded_files/assets/: debug.frag  flatShader.frag  flatShader.vert  passthrough.vert
src/embedded_files/headers/: assets_button_highlighted_png.h  assets_button_png.h  assets_debug_frag.h  assets_debug_png.h  assets_debug_vert.h  assets_flatShader_frag.h  assets_flatShader_vert.h  assets_font_LICENSE_txt.h  assets_font_Roboto_BlackItalic_ttf.h  assets_font_Roboto_Black_ttf.h  assets_font_Roboto_BoldItalic_ttf.h  assets_font_Roboto_Bold_ttf.h  assets_font_Roboto_Italic_ttf.h  assets_font_Roboto_LightItalic_ttf.h  assets_font_Roboto_Light_ttf.h  assets_font_Roboto_MediumItalic_ttf.h  assets_font_Roboto_Medium_ttf.h  assets_font_Roboto_Regular_ttf.h  assets_font_Roboto_ThinItalic_ttf.h  assets_font_Roboto_Thin_ttf.h  assets_passthrough_frag.h  assets_passthrough_vert.h  assets_text_box_highlighted_png.h  assets_text_box_png.h  font_Roboto_Regular_ttf.h
src/math/: basis.h  conversion.h  formatting_util.h  mat3x3.h  mat4x4.h  math_util.h  quaternion.h  transform2d.h  transform3d.h  vec2.h  vec3.h  vec_math.h
src/math/detail/: basis.cpp  formatting_util.cpp  mat3x3.cpp  mat4x4.cpp  quaternion.cpp  transform2d.cpp  transform3d.cpp  vec2.cpp  vec3.cpp  vec_math.cpp
src/networking/: utils.h
src/networking/detail/: utils.cpp
src/networking/m_net/: common.h  connection.cpp  connection.h  device_interface.cpp  device_interface.h  message.cpp  message.h  tsqueue.h
src/networking/steam/: lobby.h  steam.h  steam_manager.h  steam_net.h
src/networking/steam/detail/: lobby.cpp  steam_manager.cpp  steam_net.cpp
src/parallel/: parallel_processing.h  parallel_processing_impl_opencl.h  parallel_processing_manager.h
src/physics/: constraint.h  ode_solver.h  phys_globals.h  phys_obj.h  physics_manager.cpp  physics_manager.h  sle_solver.h  state.h
src/physics/constraints/: constraint.cpp
src/physics/detail/: phys_obj.cpp  physics_manager.cpp
src/physics/types/: assert.h  collision_handler.h  collision_mesh.h  constraint.h  force_generator.h  large_matrix.h  large_sparse_matrix.h  large_vector.h  mlcp_solver.h  ode_solver.h  phys_obj.h  phys_state.h  sle_solver.h
src/physics/types/constraints/: collision_constraint.cpp  collision_constraint.h  constraint.cpp
src/physics/types/detail/: assert.cpp  collision_handler.cpp  collision_mesh.cpp  ode_solver.cpp  phys_obj.cpp  sle_solver.cpp
src/rendering/: material_manager.cpp  material_manager.h  post_processing_manager.cpp  post_processing_manager.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/rendering/types/: camera.h  conversion.h  dynamic_texture.h  image.h  mat3x3.h  mat4x4.h  material.h  mesh.h  obj_loader.h  polygon.h  shader.h  text.h  texture.h  vec.h  vec2.h  vec3.h  vec_math.h
src/rendering/types/detail/: camera.cpp  image.cpp  (+13 more)
src/resource/: resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/resource/types/: resource_reference.cpp  resource_reference.h
src/scene/: scene_manager.cpp  scene_manager.h
src/scene/types/: node.h  node_path.h  node_type.h
src/ui/: font_manager.cpp  font_manager.h  ui_manager.cpp  ui_manager.h
src/ui/types/: button.cpp  button.h  font.cpp  font.h  text.cpp  text.h  text_box.cpp  text_box.h
src/util/: tsqueue.h
(+5 files in other folders)
